WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189800
[WPE] Be very permissive in the MiniBrowser.
https://bugs.webkit.org/show_bug.cgi?id=189800
Summary
[WPE] Be very permissive in the MiniBrowser.
Thibault Saunier
Reported
2018-09-20 13:26:20 PDT
[WPE] Be very permissive in the MiniBrowser.
Attachments
Patch
(2.04 KB, patch)
2018-09-20 13:26 PDT
,
Thibault Saunier
no flags
Details
Formatted Diff
Diff
Patch
(2.06 KB, patch)
2018-09-20 13:33 PDT
,
Thibault Saunier
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Thibault Saunier
Comment 1
2018-09-20 13:26:45 PDT
Created
attachment 350256
[details]
Patch
EWS Watchlist
Comment 2
2018-09-20 13:28:34 PDT
Attachment 350256
[details]
did not pass style-queue: ERROR: Tools/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Thibault Saunier
Comment 3
2018-09-20 13:33:36 PDT
Created
attachment 350257
[details]
Patch
WebKit Commit Bot
Comment 4
2018-09-22 05:43:41 PDT
Comment on
attachment 350257
[details]
Patch Clearing flags on attachment: 350257 Committed
r236385
: <
https://trac.webkit.org/changeset/236385
>
WebKit Commit Bot
Comment 5
2018-09-22 05:43:43 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-09-22 05:45:05 PDT
<
rdar://problem/44704628
>
Carlos Garcia Campos
Comment 7
2018-11-05 01:55:41 PST
Comment on
attachment 350257
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=350257&action=review
I don't understand this patch, by default the web view accepts all requests except the response ones when the content type is not supported. Why do we want to accept content that the web view doesn't know how to handle?
> Tools/MiniBrowser/wpe/main.cpp:189 > + g_signal_connect(webView, "permission-request", G_CALLBACK(decidePermissionRequest), NULL);
NULL -> nullptr
Thibault Saunier
Comment 8
2018-11-05 06:15:21 PST
(In reply to Carlos Garcia Campos from
comment #7
)
> Comment on
attachment 350257
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=350257&action=review
> > I don't understand this patch, by default the web view accepts all requests > except the response ones when the content type is not supported. Why do we > want to accept content that the web view doesn't know how to handle?
I must be missing something, but this is to give permissions to access external devices (mic/cam/etc...).
Carlos Garcia Campos
Comment 9
2018-11-05 06:21:38 PST
(In reply to Thibault Saunier from
comment #8
)
> (In reply to Carlos Garcia Campos from
comment #7
) > > Comment on
attachment 350257
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=350257&action=review
> > > > I don't understand this patch, by default the web view accepts all requests > > except the response ones when the content type is not supported. Why do we > > want to accept content that the web view doesn't know how to handle? > > I must be missing something, but this is to give permissions to access > external devices (mic/cam/etc...).
No, I was wrong, I thought this was for policy decisions. Permission requests are used for more than devices, they are also used for geolocation, notifications, etc. The default behavior is to deny everything because browsers are expected to ask the user for permission, but we don't have a way to do that in WPE (AFAIK), so I guess this is ok, since MB is just for testing after all. Sorry for the noise.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug